tests/res/has/error_spec_expr.say
say x = 1;
x has (1 + 1); // error: `has` needs a type name, a shape, or an array
